--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
-h1 {
-  background-color: red;
+@import "../variables";
 
-  span {
-    background-color: aqua;
-  }
+.networkswitch {
+  border: 1px solid #eee;
 }
 
+
+h1 {
+  background-color: red;
+}
