--- a/src/app/networkswitchings.component.html
+++ b/src/app/networkswitchings.component.html
@@ -1,24 +1,30 @@
 <h2>Network Switchings</h2>
-<ul class="networkswitchings">
-  <li *ngFor="let nwsw of networkswitchings">
+<div class="networkswitchings">
+  <div class="networkswitch" *ngFor="let nwsw of networkswitchings">
     <!--        (click)="onSelect(nwsw)"
             [class.selected]="nwsw === selectedHero"> -->
-    <span>{{nwsw.id}}</span>
-    <span>{{nwsw.state}}</span>
-    <span>{{nwsw.source.group}}</span>
-    <span>{{nwsw.source.host}}</span>
-    <span>{{nwsw.source.ipAddr}}</span>
-    <span>{{nwsw.source.zone}}</span>
-    <span>{{nwsw.destination.group}}</span>
-    <span>{{nwsw.destination.host}}</span>
-    <span>{{nwsw.destination.ipAddr}}</span>
-    <span>{{nwsw.destination.zone}}</span>
-    <span>{{nwsw.destination.port}}</span>
-    <span>{{nwsw.lastTeststate}}</span>
+    <div>
+      <span>{{nwsw.id}}</span>
+      <span>{{nwsw.state}}</span>
+      <span>{{nwsw.source.group}}</span>
+      <span>{{nwsw.source.host}}</span>
+    </div>
+    <div>
+      <span>{{nwsw.source.ipAddr}}</span>
+      <span>{{nwsw.source.zone}}</span>
+      <span>{{nwsw.destination.group}}</span>
+      <span>{{nwsw.destination.host}}</span>
+    </div>
+    <div>
+      <span>{{nwsw.destination.ipAddr}}</span>
+      <span>{{nwsw.destination.zone}}</span>
+      <span>{{nwsw.destination.port}}</span>
+      <span>{{nwsw.lastTeststate}}</span>
+    <div>
     <!--        <button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button> -->
-  </li>
+  </div>
 
-</ul>
+</div>
 
 <!--
 <div>
