--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,20 @@
 @import "../variables";
 
 .networkswitch {
-  border: 1px solid #eee;
+  border: 1px solid $border-color;
 }
 
 
 h1 {
   background-color: red;
+}
+
+.network-row {
+  display: flex;
+  justify-content: space-between;
+
+  > div {
+    width: 20%;
+    padding: 0 10px;
+  }
 }
