--- a/src/app/networkswitchings.component.html
+++ b/src/app/networkswitchings.component.html
@@ -3,24 +3,24 @@
   <div class="networkswitch" *ngFor="let nwsw of networkswitchings">
     <!--        (click)="onSelect(nwsw)"
             [class.selected]="nwsw === selectedHero"> -->
-    <div>
-      <span>{{nwsw.id}}</span>
-      <span>{{nwsw.state}}</span>
-      <span>{{nwsw.source.group}}</span>
-      <span>{{nwsw.source.host}}</span>
+    <div class="network-row">
+      <div>{{nwsw.id}}</div>
+      <div>{{nwsw.state}}</div>
+      <div>{{nwsw.source.group}}</div>
+      <div>{{nwsw.source.host}}</div>
     </div>
-    <div>
-      <span>{{nwsw.source.ipAddr}}</span>
-      <span>{{nwsw.source.zone}}</span>
-      <span>{{nwsw.destination.group}}</span>
-      <span>{{nwsw.destination.host}}</span>
+    <div class="network-row">
+      <div>{{nwsw.source.ipAddr}}</div>
+      <div>{{nwsw.source.zone}}</div>
+      <div>{{nwsw.destination.group}}</div>
+      <div>{{nwsw.destination.host}}</div>
     </div>
-    <div>
-      <span>{{nwsw.destination.ipAddr}}</span>
-      <span>{{nwsw.destination.zone}}</span>
-      <span>{{nwsw.destination.port}}</span>
-      <span>{{nwsw.lastTeststate}}</span>
-    <div>
+    <div class="network-row">
+      <div>{{nwsw.destination.ipAddr}}</div>
+      <div>{{nwsw.destination.zone}}</div>
+      <div>{{nwsw.destination.port}}</div>
+      <div>{{nwsw.lastTeststate}}</div>
+    </div>
     <!--        <button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button> -->
   </div>
 
