--- a/src/app/networkswitchings.component.html
+++ b/src/app/networkswitchings.component.html
@@ -1,6 +1,6 @@
 <h2>Network Switchings</h2>
 <div class="networkswitchings">
-  <div class="networkswitch" *ngFor="let nwsw of networkswitchings">
+  <div class="networkswitch" *ngFor="let nwsw of networkswitchings"  [routerLink]="['/detail', nwsw.id]">
     <!--        (click)="onSelect(nwsw)"
             [class.selected]="nwsw === selectedHero"> -->
     <div class="network-row">
