--- a/src/app/edit-network-switching/edit-network-switching.component.html
+++ b/src/app/edit-network-switching/edit-network-switching.component.html
@@ -8,7 +8,8 @@
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-            {{nwsw.source.host}}</a>
+           Host: {{nwsw.source.host}}
+          </a>
         </h4>
       </div>
       <div id="collapse1" class="panel-collapse collapse in">
@@ -40,7 +41,8 @@
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-            {{nwsw.destination.host}}</a>
+           Destination: {{nwsw.destination.host}}
+          </a>
         </h4>
       </div>
       <div id="collapse2" class="panel-collapse collapse">
