--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,7 @@
 </h1>
 <img src="favicon.svg" alt="header icon" width="200px"/>
 
+
+<button (click)="insert()">Create New Network Switching</button>
+
 <router-outlet></router-outlet>
