--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 @import "variables";
+
+* {
+  transition: 0.3s;
+}
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+header {
+  background: linear-gradient(top,$primary-color, $primary-color-dark);
+  color: #fff;
+}
+
+.header-container {
+  display: flex;
+  justify-content: center;
+}
+
+.body-container {
+}
