- networkswitching's ID must be unique (or null) - Sorting on arbitrary columns - JSON-objects from the server side are now packed in their respective classes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,6 @@
 
 
 <button (click)="insert()">Create New Network Switching</button>
+<div>{{errorMessage}}</div>
 
 <router-outlet></router-outlet>
