Restyled the networkswitches with 3 per row sorting splitted into 3 categories

--- a/src/_mixinsAndFunctions.scss
+++ b/src/_mixinsAndFunctions.scss
@@ -1,6 +1,5 @@
-@import "variables";
 
-@function prem($px, $base: $base-font-size) {
+@function prem($px, $base: 16) {
   @return #{$px / $base}rem;
 }
 
