--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,38 +2,66 @@
 @import "../_mixinsAndFunctions";
 
 
-.networkswitchings-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .networkswitch {
   border: 1px solid $border-color;
-  margin-top: prem(20);
-  margin-bottom: prem(20);
+  margin-top: $default-space;
+  margin-bottom: $default-space;
   border-radius: $border-radius;
+  transition: $default-transition;
+  width: 31%;
 
    &:hover {
-     background-color: lighten(#193e84, 65%);
+     background-color: lighten($primary-color, 65%);
      cursor: pointer;
    }
 }
+.network-part-title {
+  background: $gray;
+  text-align: center;
+}
 
+
+.networkswitch-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.tab-content {
+  margin-top: $default-space;
+  margin-bottom: $default-space;
+}
 
 .logo {
   max-height: prem(150);
   width: auto;
 }
 
-.network-row,
+
+/*.network-part + .network-part {
+  border-top: 1px solid $border-color;
+}*/
+
+.network-part {
+  display: flex;
+  flex-wrap: wrap;
+  padding: $default-space;
+}
+
+
+.networkswitch-label {
+  min-width: 30%;
+}
+.networkswitch-value {
+  min-width: 70%;
+}
+
 .network-header-row {
   display: flex;
   justify-content: space-between;
 
   > div {
-    width: 20%;
-    padding: 0 10px;
+    padding: 0 $default-space;
   }
 
   > sort-button {
