--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 @import "variables";
+@import "customBootstrap";
 
-* {
-  transition: 0.3s;
-}
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  font-size: $base-font-size;
 }
+
 
 header {
   background: linear-gradient(top,$primary-color, $primary-color-dark);
