--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,4 @@
-<h1>
-  {{title}}
-  <span>test</span>
-</h1>
-<img src="favicon.svg" alt="header icon" width="200px"/>
-
-
-<button (click)="insert()">Create New Network Switching</button>
+<button class="btn btn-default add-networkswitch" (click)="insert()">Create New Network Switching</button>
 <div>{{errorMessage}}</div>
 
 <router-outlet></router-outlet>
