--- a/src/app/networkswitchings.component.html
+++ b/src/app/networkswitchings.component.html
@@ -24,64 +24,70 @@
       </select>
     </div>
 -->
-  <div class="networkswitchings-header">
-    <button class="btn btn-default add-networkswitch" (click)="insert()">Create New Network Switching</button>
-  </div>
 
-  <div>
-    <button (click)="resetSorting()">Reset Sorting</button>
-  </div>
   <div class="networkswitch-header">
-    <div class="network-header-row">
-<!--
-      <button class="sort-btn" (click)="sortingButtonClicked('id')">ID
-        <sort-indicator ascending="{{isAscending('id')}}" order="{{getOrder('id')}}"></sort-indicator>
-      </button>
-    -->
-      <sort-button [sorting]="SortingID" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingSTATE" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingUSER" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingTEST_STATE" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-    </div>
-    <div class="network-header-row">
-      <sort-button [sorting]="SortingSOURCE_ZONE" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingSOURCE_GROUP" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingSOURCE_HOST" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingSOURCE_IP" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-    </div>
-    <div class="network-header-row">
-      <sort-button [sorting]="SortingDESTINATION_ZONE" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingDESTINATION_GROUP" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingDESTINATION_HOST" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingDESTINATION_IP" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-      <sort-button [sorting]="SortingDESTINATION_PORT" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
-    </div>
-  </div>
+    <ul class="nav nav-tabs">
+      <li class="active"><a data-toggle="pill" href="#sorting-general">Sorting general</a></li>
+      <li><a data-toggle="pill" href="#sorting-source">Sorting source</a></li>
+      <li><a data-toggle="pill" href="#sorting-destination">Sorting destination</a></li>
+      <button class="btn btn-default pull-right" (click)="resetSorting()">Reset Sorting</button>
+    </ul>
 
-  <div class="networkswitch" *ngFor="let nwsw of networkswitchings"  [routerLink]="['/detail', nwsw._id]">
-    <!--        (click)="onSelect(nwsw)"
-            [class.selected]="nwsw === selectedHero"> -->
-    <div class="network-row">
-      <div>{{nwsw.id}}</div>
-      <div>{{nwsw.state}}</div>
-      <div>{{nwsw.user}}</div>
-      <div>{{nwsw.getLastTeststate()}}</div>
+    <div class="tab-content">
+      <div id="sorting-general" class="network-header-row tab-pane in active">
+  <!--
+        <button class="sort-btn" (click)="sortingButtonClicked('id')">ID
+          <sort-indicator ascending="{{isAscending('id')}}" order="{{getOrder('id')}}"></sort-indicator>
+        </button>
+      -->
+        <sort-button [sorting]="SortingID" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingSTATE" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingUSER" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingTEST_STATE" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+      </div>
+      <div id="sorting-source" class="network-header-row tab-pane fade">
+        <sort-button [sorting]="SortingSOURCE_ZONE" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingSOURCE_GROUP" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingSOURCE_HOST" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingSOURCE_IP" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+      </div>
+      <div id="sorting-destination" class="network-header-row tab-pane fade">
+        <sort-button [sorting]="SortingDESTINATION_ZONE" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingDESTINATION_GROUP" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingDESTINATION_HOST" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingDESTINATION_IP" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+        <sort-button [sorting]="SortingDESTINATION_PORT" [sortingList]="sortingList" (sortingChanged)="sortingChanged()"></sort-button>
+      </div>
     </div>
-    <div class="network-row">
-      <div>{{nwsw.source.zone}}</div>
-      <div>{{nwsw.source.group}}</div>
-      <div>{{nwsw.source.host}}</div>
-      <div>{{nwsw.source.ipAddr}}</div>
-    </div>
-    <div class="network-row">
-      <div>{{nwsw.destination.zone}}</div>
-      <div>{{nwsw.destination.group}}</div>
-      <div>{{nwsw.destination.host}}</div>
-      <div>{{nwsw.destination.ipAddr}}</div>
-      <div>{{nwsw.destination.port}}</div>
-    </div>
-    <!--        <button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button> -->
   </div>
+  <div class="networkswitch-container">
+    <div class="networkswitch" *ngFor="let nwsw of networkswitchings"  [routerLink]="['/detail', nwsw._id]">
+      <!--        (click)="onSelect(nwsw)"
+              [class.selected]="nwsw === selectedHero"> -->
+      <div class="network-part-title">General</div>
+      <div class="network-part">
+        <div class="networkswitch-label">ID:</div><div class="networkswitch-value">{{nwsw.id}}</div>
+        <div class="networkswitch-label">State:</div><div class="networkswitch-value">{{nwsw.state}}</div>
+        <div class="networkswitch-label">User:</div><div class="networkswitch-value">{{nwsw.user}}</div>
+        <div class="networkswitch-label">Teststate</div><div class="networkswitch-value">{{nwsw.getLastTeststate()}}</div>
+      </div>
+      <div class="network-part-title">Source</div>
+      <div class="network-part">
+        <div class="networkswitch-label">Zone:</div><div class="networkswitch-value">{{nwsw.source.zone}}</div>
+        <div class="networkswitch-label">Group:</div><div class="networkswitch-value">{{nwsw.source.group}}</div>
+        <div class="networkswitch-label">Host:</div><div class="networkswitch-value">{{nwsw.source.host}}</div>
+        <div class="networkswitch-label">IpAddr:</div><div class="networkswitch-value">{{nwsw.source.ipAddr}}</div>
+      </div>
+      <div class="network-part-title">Destination</div>
+      <div class="network-part">
+        <div class="networkswitch-label">Zone:</div><div class="networkswitch-value">{{nwsw.destination.zone}}</div>
+        <div class="networkswitch-label">Group:</div><div class="networkswitch-value">{{nwsw.destination.group}}</div>
+        <div class="networkswitch-label">Host:</div><div class="networkswitch-value">{{nwsw.destination.host}}</div>
+        <div class="networkswitch-label">IpAddr:</div><div class="networkswitch-value">{{nwsw.destination.ipAddr}}</div>
+        <div class="networkswitch-label">Port:</div><div class="networkswitch-value">{{nwsw.destination.port}}</div>
+      </div>
+      <!--        <button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button> -->
+    </div>
 
 </div>
 
