--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,5 +1,5 @@
-@import "../variables";
-@import "../_mixinsAndFunctions";
+@import "../../variables";
+@import "../../mixinsAndFunctions";
 
 
 .networkswitch {
