optimized sorting added stylelint changed favicon to it

--- a/src/app/edit-network-switching/edit-network-switching.component.html
+++ b/src/app/edit-network-switching/edit-network-switching.component.html
@@ -15,24 +15,24 @@
       <div id="collapse1" class="panel-collapse collapse in">
         <div class="panel-body">
           <div>
-            <label>Host</label>
-            <input [(ngModel)]="nwsw.source.host" placeholder="name" />
+            <label class="networkswitch-label">Host</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.source.host" placeholder="name" />
           </div>
           <div>
-            <label>Gruppe</label>
-            <input [(ngModel)]="nwsw.source.group" placeholder="name" />
+            <label class="networkswitch-label">Gruppe</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.source.group" placeholder="name" />
           </div>
           <div>
-            <label>Ip Adresse</label>
-            <input [(ngModel)]="nwsw.source.ipAddr" placeholder="name" />
+            <label class="networkswitch-label">Ip Adresse</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.source.ipAddr" placeholder="name" />
           </div>
           <div>
-            <label>Port</label>
-            <input [(ngModel)]="nwsw.source.port" placeholder="name" />
+            <label class="networkswitch-label">Port</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.source.port" placeholder="name" />
           </div>
           <div>
-            <label>Zone</label>
-            <input [(ngModel)]="nwsw.source.zone" placeholder="name" />
+            <label class="networkswitch-label">Zone</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.source.zone" placeholder="name" />
           </div>
         </div>
       </div>
@@ -48,24 +48,24 @@
       <div id="collapse2" class="panel-collapse collapse">
         <div class="panel-body">
           <div>
-            <label>Host</label>
-            <input [(ngModel)]="nwsw.destination.host" placeholder="name" />
+            <label class="networkswitch-label">Host</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.host" placeholder="name" />
           </div>
           <div>
-            <label>Gruppe</label>
-            <input [(ngModel)]="nwsw.destination.group" placeholder="name" />
+            <label class="networkswitch-label">Gruppe</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.group" placeholder="name" />
           </div>
           <div>
-            <label>Ip Adresse</label>
-            <input [(ngModel)]="nwsw.destination.ipAddr" placeholder="name" />
+            <label class="networkswitch-label">Ip Adresse</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.ipAddr" placeholder="name" />
           </div>
           <div>
-            <label>Port</label>
-            <input [(ngModel)]="nwsw.destination.port" placeholder="name" />
+            <label class="networkswitch-label">Port</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.port" placeholder="name" />
           </div>
           <div>
-            <label>Zone</label>
-            <input [(ngModel)]="nwsw.destination.zone" placeholder="name" />
+            <label class="networkswitch-label">Zone</label>
+            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.zone" placeholder="name" />
           </div>
         </div>
       </div>
