--- a/src/app/sort-indicator/sort-indicator.component.scss
+++ b/src/app/sort-indicator/sort-indicator.component.scss
@@ -1,28 +1,18 @@
 @import "../../variables";
 
-// produces .sort1 until .sort15 with content "1" 'til "15":
-@for $i from 1 through 15 { /*at least the amount of columns to sort on*/
-  .sort#{$i}::after {
-    content: "#{$i}";
-    font-size: 70%;
-    color: red;
-  }
-}
-
 .sort-indicator {
-  float: right;
   background-color: $gray;
   display: flex;
   justify-content: center;
   height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
   border-bottom-right-radius: $border-radius;
   border-top-right-radius: $border-radius;
-  width: prem(50);
+  width: prem(40);
   align-items: center;
-  border-left: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+
 
   > .number {
     margin-left: prem(3);
