--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -15,9 +15,12 @@
      cursor: pointer;
    }
 }
+
 .network-part-title {
   background: $gray;
   text-align: center;
+  padding-top: prem(5);
+  padding-bottom: prem(5);
 }
 
 
@@ -33,7 +36,7 @@
 }
 
 .logo {
-  max-height: prem(150);
+  max-height: prem(100);
   width: auto;
 }
 
@@ -65,6 +68,7 @@
   }
 
   > sort-button {
-    width: 25%;
+    width: prem(200);
+    display: flex;
   }
 }
