styled mobile view added titles styled filtering added general informations in the detailview

--- a/src/app/edit-network-switching/edit-network-switching.component.html
+++ b/src/app/edit-network-switching/edit-network-switching.component.html
@@ -1,38 +1,54 @@
 <div *ngIf="nwsw">
   <div class="panel-group" id="accordion">
-    <div>
-      <label>ID</label>
-      <span>{{nwsw.id}}</span>
-    </div>
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-           Host: {{nwsw.source.host}}
+            General
           </a>
         </h4>
       </div>
       <div id="collapse1" class="panel-collapse collapse in">
         <div class="panel-body">
-          <div>
-            <label class="networkswitch-label">Host</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.source.host" placeholder="name" />
+          <div class="networkswitch-part">
+            <div>
+              <label class="networkswitch-label">_id</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw._id" placeholder="_id" />
+            </div>
+            <div>
+              <label class="networkswitch-label">id</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.id" placeholder="id" />
+            </div>
+            <div>
+              <label class="networkswitch-label">protocol</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.protocol" placeholder="protocol" />
+            </div>
+            <div>
+              <label class="networkswitch-label">state</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.state" placeholder="state" />
+            </div>
+            <div>
+              <label class="networkswitch-label">remark</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.remark" placeholder="remark" />
+            </div>
           </div>
-          <div>
-            <label class="networkswitch-label">Gruppe</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.source.group" placeholder="name" />
-          </div>
-          <div>
-            <label class="networkswitch-label">Ip Adresse</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.source.ipAddr" placeholder="name" />
-          </div>
-          <div>
-            <label class="networkswitch-label">Port</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.source.port" placeholder="name" />
-          </div>
-          <div>
-            <label class="networkswitch-label">Zone</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.source.zone" placeholder="name" />
+          <div class="networkswitch-part">
+            <div>
+              <label class="networkswitch-label">user</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.user" placeholder="user" />
+            </div>
+            <div>
+              <label class="networkswitch-label">testresultList</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.testresultList" placeholder="testresultList" />
+            </div>
+            <div>
+              <label class="networkswitch-label">creationDate</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.creationDate" placeholder="creationDate" />
+            </div>
+            <div>
+              <label class="networkswitch-label">lastchangeDate</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.lastchangeDate" placeholder="lastchangeDate" />
+            </div>
           </div>
         </div>
       </div>
@@ -41,31 +57,33 @@
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-           Destination: {{nwsw.destination.host}}
+           Host: {{nwsw.source.host}}
           </a>
         </h4>
       </div>
       <div id="collapse2" class="panel-collapse collapse">
         <div class="panel-body">
-          <div>
-            <label class="networkswitch-label">Host</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.host" placeholder="name" />
-          </div>
-          <div>
-            <label class="networkswitch-label">Gruppe</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.group" placeholder="name" />
-          </div>
-          <div>
-            <label class="networkswitch-label">Ip Adresse</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.ipAddr" placeholder="name" />
-          </div>
-          <div>
-            <label class="networkswitch-label">Port</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.port" placeholder="name" />
-          </div>
-          <div>
-            <label class="networkswitch-label">Zone</label>
-            <input class="networkswitch-value" [(ngModel)]="nwsw.destination.zone" placeholder="name" />
+          <div class="networkswitch-part">
+            <div>
+              <label class="networkswitch-label">Host</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.source.host" placeholder="Host" />
+            </div>
+            <div>
+              <label class="networkswitch-label">Gruppe</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.source.group" placeholder="Gruppe" />
+            </div>
+            <div>
+              <label class="networkswitch-label">Ip Adresse</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.source.ipAddr" placeholder="Ip Adresse" />
+            </div>
+            <div>
+              <label class="networkswitch-label">Port</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.source.port" placeholder="Port" />
+            </div>
+            <div>
+              <label class="networkswitch-label">Zone</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.source.zone" placeholder="Zone" />
+            </div>
           </div>
         </div>
       </div>
@@ -74,14 +92,35 @@
       <div class="panel-heading">
         <h4 class="panel-title">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-            Collapsible Group 3</a>
+           Destination: {{nwsw.destination.host}}
+          </a>
         </h4>
       </div>
       <div id="collapse3" class="panel-collapse collapse">
-        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          commodo consequat.</div>
+        <div class="panel-body">
+          <div class="networkswitch-part">
+            <div>
+              <label class="networkswitch-label">Host</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.host" placeholder="Host" />
+            </div>
+            <div>
+              <label class="networkswitch-label">Gruppe</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.group" placeholder="Gruppe" />
+            </div>
+            <div>
+              <label class="networkswitch-label">Ip Adresse</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.ipAddr" placeholder="Ip Adresse" />
+            </div>
+            <div>
+              <label class="networkswitch-label">Port</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.port" placeholder="Port" />
+            </div>
+            <div>
+              <label class="networkswitch-label">Zone</label>
+              <input class="networkswitch-value" [(ngModel)]="nwsw.destination.zone" placeholder="Zone" />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
