--- a/src/app/network-switchings-browser/network-switchings-browser.component.scss
+++ b/src/app/network-switchings-browser/network-switchings-browser.component.scss
@@ -6,7 +6,6 @@
   padding: $default-space;
 }
 
-
 .networkswitch-label {
   min-width: 30%;
 }
@@ -49,6 +48,16 @@ sort-button {
   padding-bottom: prem(5);
 }
 
+.networkswitchings-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.networkswitchings-filter {
+  margin-top: $default-space;
+  margin-bottom: $default-space;
+}
 
 .networkswitch-container{
   display: flex;
