--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,9 @@ body {
   margin-left: $default-space;
 }
 
+.glyphicon {
+  margin-right: 0.5em;
+}
 
 header {
   background: linear-gradient(to top ,$primary-color, $primary-color-dark);
