user management: basic implementation

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-default add-networkswitch" (click)="insert()">Create New Network Switching</button>
+<button class="btn btn-default add-networkswitch" (click)="insertNetworkswitching()">Create New Network Switching</button>
 <div>{{errorMessage}}</div>
 
 <router-outlet></router-outlet>
