--- a/src/app/network-switchings-browser/network-switchings-browser.component.html
+++ b/src/app/network-switchings-browser/network-switchings-browser.component.html
@@ -93,6 +93,6 @@
       </div>
       <!--        <button class="delete" (click)="delete(hero); $event.stopPropagation()">x</button> -->
     </div>
-
+  </div>
 </div>
 
