- users, projects and networkswitchings modelling - authentication - switch to user page if user is not logged in

--- a/src/app/network-switchings-browser/network-switchings-browser.component.html
+++ b/src/app/network-switchings-browser/network-switchings-browser.component.html
@@ -67,7 +67,7 @@
     </div>
   </div>
   <div class="networkswitch-container">
-    <div class="networkswitch" *ngFor="let nwsw of networkswitchings"  [routerLink]="['/detail', nwsw._id]">
+    <div class="networkswitch" *ngFor="let nwsw of networkswitchings"  [routerLink]="['/detail', getProjectId(), nwsw._id]">
       <!--        (click)="onSelect(nwsw)"
               [class.selected]="nwsw === selectedHero"> -->
       <div class="network-part-title">General</div>
